@@ -1,3 +1,10 @@
+July 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * debian/control: Added libasound2-dev to Build-Depends.
+ * libpcsxcore/plugins.h: Fixed SubQ struct.
+ * libpcsxcore/cdriso.c: Implemented subchannel reading from CloneCD
+   .sub file.
+
 July 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * libpcsxcore/psxbios.c: Use s32 instead of long in DIRENTRY struct for
